# drafts-cli

./: .gitignore  README.md  database.py  drafts.py  drafts.tcss  helpers.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: tests.yml
drafts_cli/: app.tcss
drafts_cli/components/: draft_item.py  editor.py  sidebar.py
drafts_cli/database/: __init__.py
drafts_cli/messages/: __init__.py  confirmation.py
drafts_cli/utilities/: logger.py
src/drafts_cli/: app.py  app.tcss  pytest.ini
src/drafts_cli/components/: __init__.py  confirm_modal.py  draft_item.py  drafts_list.py  editor.py  sidebar.py
src/drafts_cli/database/: __init__.py  database.py  draft_model.py
src/drafts_cli/tests/: test_draft_list.py  test_editor.py  test_search.py
src/drafts_cli/utilities/: __init__.py  helpers.py
tests/: setup.py  test_draft_list.py  test_editor.py  test_search.py
