[tool.poetry]
name = "drafts-cli"
version = "0.1.0"
description = ""
authors = ["huynggg <huyanguyen3695@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=4.0"
peewee = "*"
textual = "*"
pytz = "*"

[tool.poetry.dev-dependencies]
peewee = "*"
textual = "*"
textual-dev = "*"
pytest = "*"
pytest-asyncio = "*"
pytz = "*"

[tool.poetry.scripts]
drafts = "drafts_cli.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
